HelloUltraviolet/Fixtures/RejectedSource/Expressions/TupleAccessNonTuple/Expected.uv
//! Expected diagnostic metadata for the TupleAccessNonTuple rejected-source specimen.

expectedDiagnostic("E-SEM-2524", "diag.16.AccessAndPlaceExpressions")
